# cuba

./: ChangeLog  README  README.rst  config.h.in  configure  configure.ac  cuba.h  cuba.tex  demo-c.c  demo-c.out.ok  demo-fortran.F  macOSmakesharedlib.sh  makefile  makefile.in  makefile.shared  makesharedlib.sh
cuhre/: Cuhre.c  Cuhre.tm  Integrate.c  Rule.c  common.c  cuhre-f.c  decl.h  stddecl.h  util.c
demo/: cuba.F  demo-c.c  demo-fortran.F
divonne/: ChiSquare.c  Divonne.c  Divonne.tm  Explore.c  FindMinimum.c  Integrate.c  Rule.c  Sample.c  Split.c  common.c  decl.h  divonne-f.c  divonne_f.c  util.c
src/common/: CSample.c  DoSample.c  Fork.c  MSample.c  Random.c  stddecl.h
src/cuhre/: Cuhre.c  Cuhre.tm  Integrate.c  Rule.c  common.c  cuhre-f.c  cuhre_f.c  decl.h
src/divonne/: Divonne.c  Divonne.tm  Explore.c  Integrate.c  Iterate.c  Rule.c  Sample.c  Split.c  common.c  decl.h  divonne-f.c  util.c
src/suave/: Integrate.c  Sample.c  Suave.c  Suave.tm  common.c  decl.h  suave-f.c
src/vegas/: Grid.c  Integrate.c  Vegas.c  Vegas.tm  decl.h  util.c  vegas-f.c
suave/: Fluct.c  Grid.c  Integrate.c  Sample.c  Sobol.c  Suave.c  Suave.tm  common.c  debug.c  decl.h  suave-f.c  suave_f.c  util.c
tools/: fcc  mcc  mkstatic  partview.cpp
vegas/: Grid.c  Integrate.c  Random.c  Vegas.c  Vegas.tm  common.c  debug.c  decl.h  util.c  vegas-f.c  vegas_f.c
